syntax = "proto3";

package centralcommandsvc.v1;

option go_package = "deblasis.net/space-traffic-control/gen/proto/go/centralcommandsvc/proto/v1;centralcommandsvc_v1";

service CentralCommandService {
  rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
  
  rpc RegisterStation(RegisterStationRequest) returns (RegisterStationResponse) {}
  rpc RegisterShip(RegisterShipRequest) returns (RegisterShipResponse) {}

  rpc GetAllShips (GetAllShipsRequest) returns (GetAllShipsResponse) {}
  rpc GetAllStations (GetAllStationsRequest) returns (GetAllStationsResponse) {}
}


message Dock {
  string id = 1;
  string station_id =2;
  int64 num_docking_ports = 3;
  int64 occupied = 4;
  float weight = 5;
}


message Station {
  string id = 1;
  float capacity = 2;
  float used_capacity =3;

  repeated Dock docks = 4;
}

message Ship {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_INFLIGHT=1;
    STATUS_DOCKED=2;
  }
  string id = 1;
  //@gotags: model:"-"
  Status status = 2; 
  float weight = 3;
}


message RegisterStationRequest {
  Station station = 1;
}
message RegisterStationResponse {
  Station station = 1;
  string error = 2;
}

message RegisterShipRequest {
  Ship ship = 1;
}
message RegisterShipResponse {
  Ship ship = 1;
  string error = 2;
}


message GetAllShipsRequest {
}
message GetAllShipsResponse {
  repeated Ship ships = 1;
  string error = 2;
}
message GetAllStationsRequest {
}
message GetAllStationsResponse {
  repeated Station stations = 1;
  string error = 2;
}


message ServiceStatusRequest {}

message ServiceStatusResponse {
  int64 code = 1;
  string err = 2;
}